test/libyul/yulSyntaxTests/opcode_for_function_args_1.yul
{
	function f(gas) {}
}
// ----
// ParserError 5568: (14-17): Cannot use builtin function name "gas" as identifier name.
